day7/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello
spec:
  type: NodePort
  selector:
    app: flask-hello
  ports:
    - protocol: TCP
      port: 80  #expose ip in minikube
      targetPort: 80   # expose ip in docker
      nodePort: 30001 #expose ip in local port
